# ZalypaWeb

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh
browser/: __init__.py  main.py
browser/core/: __init__.py  browser_engine.py  profiles.py  security.py  tabs.py
browser/database/: __init__.py  bookmarks.py  connection.py  downloads.py  history.py  settings.py
browser/resources/: newtab.html  not_found.html  offline.html  starter_filters.txt
browser/services/: __init__.py  adblock.py  extensions.py  filter_updater.py  sync.py
browser/ui/: bookmarks_bar.py  dialogs.py  find_bar.py  main_window.py  material_theme.py  navigation_bar.py  overlays.py  panels.py  settings.py  start_page.py  tabs_bar.py
tests/: conftest.py  test_database.py  test_services.py  test_tabs.py  test_ui.py
